# AlgoTrack

./: .gitignore  CMakeLists.txt  HowToRun.txt  ProblemManager.h  README.md  Utils.cpp  main.cpp
build_qt/: .ninja_deps  .ninja_log  build.ninja
build_qt/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_qt/AlgoTrackQt_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build_qt/AlgoTrackQt_autogen/UVLADIE3JM/: moc_AddProblemDialog.cpp  moc_AddProblemDialog.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d
data/: problems.csv  problems.example.csv
docs/: HowToRun.txt  index.html  script.js  styles.css
qt_app/: .gitignore  CMakeLists.txt  README.md  resources.qrc  style.qss
qt_app/data/: problems.csv
qt_app/src/: AddProblemDialog.cpp  AddProblemDialog.h  AddProblemDialog.ui  MainWindow.cpp  MainWindow.h  main.cpp
qt_app/styles/: dark.qss  dialog.qss  light.qss
src/: ConsoleUI.cpp  ConsoleUI.h  Enums.h  Fuzzy.cpp  Fuzzy.h  Problem.cpp  Problem.h  ProblemManager.cpp  ProblemManager.h  ProblemRepository.cpp  ProblemRepository.h  QueryParser.cpp  QueryParser.h  Statistics.cpp  Statistics.h  Utils.cpp  Utils.h  main.cpp
v1.0/: ConsoleUI.cpp  ConsoleUI.h  Enums.h  HowToRun.txt  Problem.h  README.md  problems.csv
v2.0/: Problem.cpp  ProblemManager.cpp  ProblemRepository.cpp  ProblemRepository.h  Statistics.cpp  Statistics.h  Utils.h
